=== Deluge 1.2.1 ===
==== GtkUI ====
	* Fix #1128 Show an error dialog when unable to start a 'deluged' process
	
=== Deluge 1.2.0 - "Bursting like an infected kidney" (10 January 2010) ===
==== Core ====
	* Fix file renaming
	* Fix tracker host filtering (Closes #1106)
	* Fix exceptions when gettext/locale cannot be initialized properly
	* Change share ratio calculation to use the total done instead of the all time
	  downloaded value.  This change will make the share ratio calculation not
	  use data downloaded in failed hash checks.
	* Fix torrent info name not being utf-8 decoded when root file/folder name
	  is blank

==== GtkUI ====
	* Fix #1104, #735 use path.utf-8 if available
	* Fix #1114 test active port not working in classic mode

==== Console ====
	* Fix #1115 not showing usage for the 'debug' command
	* Fix #1116 not being able to use command aliases when not connected to a daemon
	* Fix #1117 can't use the '3' key

==== Windows ====
	* Fix displaying folders in the add torrent dialog
	* Fix displaying the new release dialog

==== Blocklist ====
	* Fix blocklist status icon not opening the blocklist preference
	  page in certain locales
	* Fix blocklist not recognising comments that begin with whitespace
	* Minor speedup in parsing blocklists
	* Blocklist now attempts to download the URL multiple times before giving
	  up
	* Fix blocklist not being able to open zipped blocklists with python 2.5

==== Web ====
	* Put the default password in the manpage.

=== Deluge 1.2.0_rc5 (17 December 2009) ===
==== Web ====
	* Swap order of buttons in Remove window (Closes #1083)
	* Change the compressed js script to deluge-all.js to avoid naming
	  conflicts on case-sensitive filesystems.
	* Apply patch from adios fixing the cookie date
	* Add tooltips to the statusbar items
	* Add disk usage to the statusbar
	* Add a ToggleField widget and use this on the Downloads preferences
	  page allowing the movecom/copytorrent/autoadd boxes to be enabled.